[gd_scene load_steps=2 format=3]

[ext_resource path="res://scripts/ui/mission_hud.gd" type="Script" id=1]

[node name="MissionHUD" type="Control"]
script = ExtResource( 1 )

[node name="ObjectiveLabel" type="Label" parent="."]
rect_position = Vector2(8, 8)
text = ""

[node name="OxygenLabel" type="Label" parent="."]
rect_position = Vector2(8, 32)
text = ""

[node name="VignetteRect" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2(0, 0)
color = Color(0,0,0,0)
mouse_filter = 1

[node name="DesaturateRect" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2(0, 0)
color = Color(0,0,0,0)
mouse_filter = 1

# ensure UI overlays sit above labels
[node name="VignetteRect" parent="."]
rect_z_index = 10
[node name="DesaturateRect" parent="."]
rect_z_index = 9
